# linear_regression_model

./: .gitignore  pyproject.toml
summative/API/: prediction.py  requirement.txt  requirements.txt
summative/flutter_app/: pubspec.yaml
summative/flutter_app/lib/: main.dart
summative/flutter_app/lib/constants/: dropdown_options.dart
summative/flutter_app/lib/pages/: prediction_page.dart
summative/flutter_app/lib/services/: prediction_service.dart
summative/linear_regression/: best_model.pkl  multivariate.ipynb  scaler.pkl
